# Moroccan-Chef

./: .gitignore  README.md  pyproject.toml
data/: chunks.json
data/chroma/: chroma.sqlite3
data/chroma/56406ef4-fa11-4a30-b1ed-20968439c9b3/: index_metadata.pickle
data/markdowns/: markdown_recipes.md
notebooks/: recipes_exploration.ipynb
src/: .env.example  cli.py
src/assets/: cooking_chef.postman_collection.json
src/backend/: main.py
src/eval/: evaluate.py  evaluation_queries_50.json  evaluation_queries_50_paraphrased.json
src/frontend/: streamlit.py
src/index/: indexer.py
src/notebooks/: make_dataset.ipynb  recipes_exploration.ipynb
src/parse/: parser.py
src/rag/: generate.py  main.py  orchestrate.py  qa.py  retrieve.py  route_query.py
