[tool.poetry]
name = "cooking-assistant"
version = "0.1.0"
description = ""
authors = ["nawfaladil16 <nawfaladil16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pymupdf = "^1.27.1"
pymupdf4llm = "^0.3.4"
pymupdf-layout = "^1.27.1"
numpy = "^2.4.2"
torchvision = "^0.25.0"
torchaudio = "^2.10.0"
sentence-transformers = "^5.2.3"
chromadb = "^1.5.0"
langchain = "^1.2.10"
langchain-ollama = "^1.0.1"
langchain-community = "^0.4.1"
langchain-text-splitters = "^1.1.1"
unstructured = {extras = ["md"], version = "^0.20.8"}
langchain-chroma = "^1.1.0"
langchain-huggingface = "^1.2.0"
pandas = ">=1.4.0,<3"
torch = {version = "^2.10.0+cu126", source = "torch_cuda"}
rank-bm25 = "^0.2.2"
flashrank = "^0.2.10"
fastapi = {extras = ["standard"], version = "^0.131.0"}
streamlit = "^1.54.0"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "torch_cuda"
url = "https://download.pytorch.org/whl/cu126"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
